<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".TripActivity">


    <EditText
        android:id="@+id/tripTitle"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/triptitleLabel"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripImage" />

    <EditText
        android:id="@+id/tripLat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/latLabel"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripTitle" />

    <EditText
        android:id="@+id/tripLng"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/lngLabel"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tripLat"
        app:layout_constraintTop_toBottomOf="@+id/tripTitle" />

    <Button
        android:id="@+id/btnSaveTrip"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/saveTrip"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/deleteTrip"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/deleteTrip"
        app:layout_constraintTop_toBottomOf="@+id/deleteTrip"
        app:layout_constraintVertical_bias="0.175" />

    <Button
        android:id="@+id/navigateChatRoom"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/chat"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/join"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/join"
        app:layout_constraintTop_toBottomOf="@+id/join" />

    <Button
        android:id="@+id/inviteUsers"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="52dp"
        android:text="@string/discover"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripLat" />

    <Button
        android:id="@+id/join"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/join"
        app:layout_constraintEnd_toEndOf="@+id/inviteUsers"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/inviteUsers"
        app:layout_constraintTop_toBottomOf="@+id/inviteUsers" />

    <Button
        android:id="@+id/deleteTrip"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="Delete Trip"
        app:layout_constraintEnd_toEndOf="@+id/navigateChatRoom"
        app:layout_constraintStart_toStartOf="@+id/navigateChatRoom"
        app:layout_constraintTop_toBottomOf="@+id/navigateChatRoom" />

    <ImageView
        android:id="@+id/tripImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_icon" />

    <TextView
        android:id="@+id/textViewImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/selectimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/tripImage"
        app:layout_constraintTop_toTopOf="@+id/tripImage" />

</androidx.constraintlayout.widget.ConstraintLayout>