<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".DashBoardActivity">

    <TextView
        android:id="@+id/db_dashboard_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/db_dashboard_title"

        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_recycler_view"
        android:layout_width="384dp"
        android:layout_height="523dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/db_add_trip_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonViewProfile"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/db_add_trip_container"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/add_trip_icon" />

    <TextView
        android:id="@+id/textViewAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/AddTrip"
        app:layout_constraintEnd_toStartOf="@+id/db_add_trip_container"
        app:layout_constraintTop_toBottomOf="@+id/user_recycler_view" />

    <Button
        android:id="@+id/buttonViewProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/viewProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <androidx.cardview.widget.CardView-->
    <!--        android:id="@+id/db_join_trip_container"-->
    <!--        android:layout_width="70dp"-->
    <!--        android:layout_height="70dp"-->
    <!--        android:layout_marginStart="30dp"-->
    <!--        android:layout_marginBottom="30dp"-->
    <!--        app:cardBackgroundColor="#fff"-->
    <!--        app:cardCornerRadius="90dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent">-->

    <!--        <androidx.cardview.widget.CardView-->
    <!--            android:layout_width="70dp"-->
    <!--            android:layout_height="70dp"-->
    <!--            app:cardBackgroundColor="@color/primaryDarkColor"-->
    <!--            app:cardCornerRadius="140dp">-->

    <!--            <TextView-->
    <!--                android:id="@+id/db_tv_join_trip_text"-->
    <!--                android:layout_width="70dp"-->
    <!--                android:layout_height="70dp"-->
    <!--                android:gravity="center"-->
    <!--                android:padding="10dp"-->
    <!--                android:text="Join Trip"-->
    <!--                android:textColor="@android:color/white" />-->
    <!--        </androidx.cardview.widget.CardView>-->
    <!--    </androidx.cardview.widget.CardView>-->

</androidx.constraintlayout.widget.ConstraintLayout>